# Polar

./: .gitignore  CHANGELOG.md  Pict.glade  Pict.glade_20211103  README.md  polar.cabal
.hie/: Main.hie  PictContext.hie  Polar.hie
app/: Main.hs  Main.hs~
benchmark/: Main.hs
dist-newstyle/cache/: plan.json
dist-newstyle/packagedb/ghc-8.8.3/: package.cache  polar-0.0.0.0-inplace.conf
src/: PictContext.hs  Polar.hs
test/: Spec.hs
