cabal-version:       2.4
name:                polar
version:             0.0.0.0
synopsis:            Exprerimentation on polar transformantions
description:
    Exprerimentation on polar transformantions.
    See README.md for more details.
license:             GPL-3.0-only
license-file:        LICENSE
author:              myuge
maintainer:          myuge <myuge@acm.org>
copyright:           2021 myuge
category:            Art
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

common common-options
--  build-depends:       base ^>= 4.14.1.0
  build-depends:       base ^>= 4.13.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Polar,
                       PictContext

executable polar
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       polar,
                       text,
                       bytestring,
                       time,
		       gtk
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite polar-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       polar
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark polar-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       polar
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
